// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <span
        class="ant-badge semantic-mark-root css-var-v-0"
      >
        <span
          class="ant-avatar ant-avatar-lg ant-avatar-square css-var-v-0 ant-avatar-css-var"
        >
          <span
            class="ant-avatar-string"
            style="opacity: 0;"
          />
        </span>
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
          enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
          entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
          leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
          leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
          leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
          name="ant-badge-zoom"
          persisted="false"
        >
          <sup
            class="ant-scroll-number semantic-mark-indicator ant-badge-count"
            data-show="true"
            title="5"
          >
            <bdi>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  5
                </span>
              </span>
            </bdi>
          </sup>
        </transition-stub>
        <!---->
      </span>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with relative positioning, inline-block display, and fit-content width for basic layout
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  indicator
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Indicator element with positioning, z-index, dimensions, colors, fonts, text alignment, background, border-radius, box-shadow, and transition animations for complete badge styling
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`badge demo > renders _semantic_ribbon correctly 1`] = `
<div
  style="display: flex; flex-direction: column; gap: 24px;"
>
  <div
    class="semantic-preview-container"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-row css-var-root semantic-preview-row"
      data-v-dfc8ebef=""
    >
      <div
        class="ant-col ant-col-16 css-var-root semantic-preview-col"
        data-v-dfc8ebef=""
      >
        <div
          style="width: 100%;"
        >
          <div
            class="ant-ribbon-wrapper css-var-v-0 semantic-mark-root"
          >
            <div
              class="ant-card ant-card-bordered ant-card-small css-var-v-0"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Pushes open the window
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
              <div
                class="ant-card-body"
              >
                 and raises the spyglass. 
              </div>
              <!---->
            </div>
            <div
              class="ant-ribbon ant-ribbon-placement-end ant-ribbon-color-magenta semantic-mark-indicator"
            >
              <span
                class="ant-ribbon-content semantic-mark-content"
              >
                Hippies
              </span>
              <div
                class="ant-ribbon-corner"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-8 css-var-root"
        data-v-dfc8ebef=""
      >
        <ul
          class="semantic-list"
          data-v-dfc8ebef=""
        >
          <li
            class="semantic-list-item"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
              data-v-dfc8ebef=""
            >
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <!-- Title + Version -->
                <div
                  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                  data-v-dfc8ebef=""
                >
                  <h5
                    class="ant-typography css-var-root"
                    style="margin: 0px;"
                  >
                    root
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                  </h5>
                  <span
                    class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                    data-v-dfc8ebef=""
                  >
                    1.0.0
                    <!---->
                    <!---->
                    <!---->
                  </span>
                </div>
                <!-- Pin + Sample -->
                <div
                  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                  data-v-dfc8ebef=""
                >
                  <button
                    class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                    data-v-dfc8ebef=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="pushpin"
                        class="anticon anticon-pushpin"
                        data-v-dfc8ebef=""
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="pushpin"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                          />
                        </svg>
                      </span>
                    </span>
                    <!---->
                    <!---->
                  </button>
                  <button
                    class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                    data-v-dfc8ebef=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="info-circle"
                        class="anticon anticon-info-circle"
                        data-v-dfc8ebef=""
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="info-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                          />
                          <path
                            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </span>
                    </span>
                    <!---->
                    <!---->
                  </button>
                  <!---->
                </div>
              </div>
              <div
                class="ant-typography css-var-root"
                style="margin: 0px; font-size: 12px;"
              >
                Root element, set relative positioning and wrapper container styles
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </li>
          <li
            class="semantic-list-item"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
              data-v-dfc8ebef=""
            >
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <!-- Title + Version -->
                <div
                  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                  data-v-dfc8ebef=""
                >
                  <h5
                    class="ant-typography css-var-root"
                    style="margin: 0px;"
                  >
                    indicator
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                  </h5>
                  <span
                    class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                    data-v-dfc8ebef=""
                  >
                    1.0.0
                    <!---->
                    <!---->
                    <!---->
                  </span>
                </div>
                <!-- Pin + Sample -->
                <div
                  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                  data-v-dfc8ebef=""
                >
                  <button
                    class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                    data-v-dfc8ebef=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="pushpin"
                        class="anticon anticon-pushpin"
                        data-v-dfc8ebef=""
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="pushpin"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                          />
                        </svg>
                      </span>
                    </span>
                    <!---->
                    <!---->
                  </button>
                  <button
                    class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                    data-v-dfc8ebef=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="info-circle"
                        class="anticon anticon-info-circle"
                        data-v-dfc8ebef=""
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="info-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                          />
                          <path
                            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </span>
                    </span>
                    <!---->
                    <!---->
                  </button>
                  <!---->
                </div>
              </div>
              <div
                class="ant-typography css-var-root"
                style="margin: 0px; font-size: 12px;"
              >
                Indicator element, set absolute positioning, padding, background color, border radius and ribbon styles
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </li>
          <li
            class="semantic-list-item"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
              data-v-dfc8ebef=""
            >
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <!-- Title + Version -->
                <div
                  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                  data-v-dfc8ebef=""
                >
                  <h5
                    class="ant-typography css-var-root"
                    style="margin: 0px;"
                  >
                    content
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                    <!---->
                  </h5>
                  <span
                    class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                    data-v-dfc8ebef=""
                  >
                    1.0.0
                    <!---->
                    <!---->
                    <!---->
                  </span>
                </div>
                <!-- Pin + Sample -->
                <div
                  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                  data-v-dfc8ebef=""
                >
                  <button
                    class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                    data-v-dfc8ebef=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="pushpin"
                        class="anticon anticon-pushpin"
                        data-v-dfc8ebef=""
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="pushpin"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                          />
                        </svg>
                      </span>
                    </span>
                    <!---->
                    <!---->
                  </button>
                  <button
                    class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                    data-v-dfc8ebef=""
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="info-circle"
                        class="anticon anticon-info-circle"
                        data-v-dfc8ebef=""
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="info-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                          />
                          <path
                            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </span>
                    </span>
                    <!---->
                    <!---->
                  </button>
                  <!---->
                </div>
              </div>
              <div
                class="ant-typography css-var-root"
                style="margin: 0px; font-size: 12px;"
              >
                Content element, set text color and ribbon content display styles
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`badge demo > renders basic correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-middle ant-space-gap-col-middle css-var-root"
>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count"
          data-show="true"
          title="5"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                5
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count"
          data-show="true"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                0
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle ant-scroll-number-custom-component"
          role="img"
          style="color: rgb(245, 34, 45);"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
</div>
`;

exports[`badge demo > renders change correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-large ant-space-gap-col-large css-var-root"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-badge css-var-root"
        >
          <span
            class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
          >
            <span
              class="ant-avatar-string"
              style="opacity: 0;"
            />
          </span>
          <transition-stub
            appear="false"
            css="true"
            enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
            enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
            entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
            leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
            leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
            leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
            name="ant-badge-zoom"
            persisted="false"
          >
            <sup
              class="ant-scroll-number ant-badge-count"
              data-show="true"
              title="5"
            >
              <bdi>
                <span
                  class="ant-scroll-number-only"
                  style="transition: none;"
                >
                  <span
                    class="ant-scroll-number-only-unit current"
                  >
                    5
                  </span>
                </span>
              </bdi>
            </sup>
          </transition-stub>
          <!---->
        </span>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space-compact css-var-root"
        >
          <button
            class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-btn-compact-item ant-btn-compact-first-item"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="minus"
                class="anticon anticon-minus"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="minus"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </span>
            <!---->
            <!---->
          </button>
          <button
            class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-btn-compact-item"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="plus"
                class="anticon anticon-plus"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="plus"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                  />
                  <path
                    d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
                  />
                </svg>
              </span>
            </span>
            <!---->
            <!---->
          </button>
          <button
            class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-btn-compact-item ant-btn-compact-last-item"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="question"
                class="anticon anticon-question"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M764 280.9c-14-30.6-33.9-58.1-59.3-81.6C653.1 151.4 584.6 125 512 125s-141.1 26.4-192.7 74.2c-25.4 23.6-45.3 51-59.3 81.7-14.6 32-22 65.9-22 100.9v27c0 6.2 5 11.2 11.2 11.2h54c6.2 0 11.2-5 11.2-11.2v-27c0-99.5 88.6-180.4 197.6-180.4s197.6 80.9 197.6 180.4c0 40.8-14.5 79.2-42 111.2-27.2 31.7-65.6 54.4-108.1 64-24.3 5.5-46.2 19.2-61.7 38.8a110.85 110.85 0 00-23.9 68.6v31.4c0 6.2 5 11.2 11.2 11.2h54c6.2 0 11.2-5 11.2-11.2v-31.4c0-15.7 10.9-29.5 26-32.9 58.4-13.2 111.4-44.7 149.3-88.7 19.1-22.3 34-47.1 44.3-74 10.7-27.9 16.1-57.2 16.1-87 0-35-7.4-69-22-100.9zM512 787c-30.9 0-56 25.1-56 56s25.1 56 56 56 56-25.1 56-56-25.1-56-56-56z"
                  />
                </svg>
              </span>
            </span>
            <!---->
            <!---->
          </button>
        </div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-large ant-space-gap-col-large css-var-root"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-badge css-var-root"
        >
          <span
            class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
          >
            <span
              class="ant-avatar-string"
              style="opacity: 0;"
            />
          </span>
          <transition-stub
            appear="false"
            css="true"
            enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
            enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
            entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
            leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
            leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
            leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
            name="ant-badge-zoom"
            persisted="false"
          >
            <sup
              class="ant-scroll-number ant-badge-dot"
              data-show="true"
            >
              <bdi />
            </sup>
          </transition-stub>
          <!---->
        </span>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <button
          aria-checked="true"
          checked="true"
          class="ant-switch css-var-root ant-switch-checked"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          >
            <!---->
          </div>
          <span
            class="ant-switch-inner"
          >
            <span
              class="ant-switch-inner-checked"
            >
              <!---->
            </span>
            <span
              class="ant-switch-inner-unchecked"
            >
              <!---->
            </span>
          </span>
        </button>
      </div>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`badge demo > renders colorful correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Presets 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <div
    class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
  >
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-pink"
        />
        <span
          class="ant-badge-status-text"
        >
          pink
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-red"
        />
        <span
          class="ant-badge-status-text"
        >
          red
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-yellow"
        />
        <span
          class="ant-badge-status-text"
        >
          yellow
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-orange"
        />
        <span
          class="ant-badge-status-text"
        >
          orange
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-cyan"
        />
        <span
          class="ant-badge-status-text"
        >
          cyan
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-green"
        />
        <span
          class="ant-badge-status-text"
        >
          green
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-blue"
        />
        <span
          class="ant-badge-status-text"
        >
          blue
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-purple"
        />
        <span
          class="ant-badge-status-text"
        >
          purple
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-geekblue"
        />
        <span
          class="ant-badge-status-text"
        >
          geekblue
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-magenta"
        />
        <span
          class="ant-badge-status-text"
        >
          magenta
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-volcano"
        />
        <span
          class="ant-badge-status-text"
        >
          volcano
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-gold"
        />
        <span
          class="ant-badge-status-text"
        >
          gold
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-color-lime"
        />
        <span
          class="ant-badge-status-text"
        >
          lime
        </span>
      </span>
    </div>
    <!---->
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Custom 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <div
    class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
  >
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot"
          style="background: rgb(255, 85, 0); color: rgb(255, 85, 0);"
        />
        <span
          class="ant-badge-status-text"
        >
          #f50
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot"
          style="background: rgb(45, 183, 245); color: rgb(45, 183, 245);"
        />
        <span
          class="ant-badge-status-text"
        >
          rgb(45, 183, 245)
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot"
          style="background: rgb(135, 208, 103); color: rgb(135, 208, 103);"
        />
        <span
          class="ant-badge-status-text"
        >
          hsl(102, 53%, 61%)
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot"
          style="background: rgb(15, 142, 232); color: rgb(15, 142, 232);"
        />
        <span
          class="ant-badge-status-text"
        >
          hwb(205 6% 9%)
        </span>
      </span>
    </div>
    <!---->
  </div>
</div>
`;

exports[`badge demo > renders dot correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        aria-label="notification"
        class="anticon anticon-notification"
        role="img"
        style="font-size: 16px;"
      >
        <svg
          aria-hidden="true"
          data-icon="notification"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.7c-3.7 11.6-5.7 23.9-5.7 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1zm496 58.4L318.8 611.3l-12.9-5.2H184V417.9h121.9l12.9-5.2L840 203.3v617.4z"
          />
        </svg>
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-dot"
          data-show="true"
        >
          <bdi />
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <a
        href="#"
      >
        Link something
      </a>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-dot"
          data-show="true"
        >
          <bdi />
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
</div>
`;

exports[`badge demo > renders link correctly 1`] = `
<a
  href="#"
>
  <span
    class="ant-badge css-var-root"
  >
    <span
      class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
    >
      <span
        class="ant-avatar-string"
        style="opacity: 0;"
      />
    </span>
    <transition-stub
      appear="false"
      css="true"
      enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
      enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
      entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
      leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
      leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
      leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
      name="ant-badge-zoom"
      persisted="false"
    >
      <sup
        class="ant-scroll-number ant-badge-count"
        data-show="true"
        title="5"
      >
        <bdi>
          <span
            class="ant-scroll-number-only"
            style="transition: none;"
          >
            <span
              class="ant-scroll-number-only-unit current"
            >
              5
            </span>
          </span>
        </bdi>
      </sup>
    </transition-stub>
    <!---->
  </span>
</a>
`;

exports[`badge demo > renders no-wrapper correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <button
      aria-checked="true"
      checked="true"
      class="ant-switch css-var-root ant-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      >
        <!---->
      </div>
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          <!---->
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          <!---->
        </span>
      </span>
    </button>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge ant-badge-not-a-wrapper css-var-root"
    >
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
          data-show="true"
          style="background: rgb(250, 173, 20);"
          title="11"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                1
              </span>
            </span>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                1
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge ant-badge-not-a-wrapper css-var-root"
    >
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
          data-show="true"
          title="25"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                2
              </span>
            </span>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                5
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge ant-badge-not-a-wrapper css-var-root"
    >
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle ant-scroll-number-custom-component"
          role="img"
          style="color: rgb(245, 34, 45);"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge ant-badge-not-a-wrapper site-badge-count-109 css-var-root"
    >
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
          data-show="true"
          style="background-color: rgb(82, 196, 26);"
          title="109"
        >
          99+
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
</div>
`;

exports[`badge demo > renders offset correctly 1`] = `
<span
  class="ant-badge css-var-root"
>
  <span
    class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
  >
    <span
      class="ant-avatar-string"
      style="opacity: 0;"
    />
  </span>
  <transition-stub
    appear="false"
    css="true"
    enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
    enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
    entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
    leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
    leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
    leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
    name="ant-badge-zoom"
    persisted="false"
  >
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      style="margin-top: 10px; inset-inline-end: -10px;"
      title="5"
    >
      <bdi>
        <span
          class="ant-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="ant-scroll-number-only-unit current"
          >
            5
          </span>
        </span>
      </bdi>
    </sup>
  </transition-stub>
  <!---->
</span>
`;

exports[`badge demo > renders overflow correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-large ant-space-gap-col-large css-var-root"
>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
          data-show="true"
          title="99"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                9
              </span>
            </span>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                9
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
          data-show="true"
          title="100"
        >
          99+
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
          data-show="true"
          title="99"
        >
          10+
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
          data-show="true"
          title="1000"
        >
          999+
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
</div>
`;

exports[`badge demo > renders ribbon correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-middle ant-space-gap-col-middle css-var-root"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-ribbon-wrapper css-var-root"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-var-root"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Pushes open the window
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="ant-card-body"
        >
           and raises the spyglass. 
        </div>
        <!---->
      </div>
      <div
        class="ant-ribbon ant-ribbon-placement-end"
      >
        <span
          class="ant-ribbon-content"
        >
          Hippies
        </span>
        <div
          class="ant-ribbon-corner"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-ribbon-wrapper css-var-root"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-var-root"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Pushes open the window
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="ant-card-body"
        >
           and raises the spyglass. 
        </div>
        <!---->
      </div>
      <div
        class="ant-ribbon ant-ribbon-placement-end ant-ribbon-color-pink"
      >
        <span
          class="ant-ribbon-content"
        >
          Hippies
        </span>
        <div
          class="ant-ribbon-corner"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-ribbon-wrapper css-var-root"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-var-root"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Pushes open the window
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="ant-card-body"
        >
           and raises the spyglass. 
        </div>
        <!---->
      </div>
      <div
        class="ant-ribbon ant-ribbon-placement-end ant-ribbon-color-red"
      >
        <span
          class="ant-ribbon-content"
        >
          Hippies
        </span>
        <div
          class="ant-ribbon-corner"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-ribbon-wrapper css-var-root"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-var-root"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Pushes open the window
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="ant-card-body"
        >
           and raises the spyglass. 
        </div>
        <!---->
      </div>
      <div
        class="ant-ribbon ant-ribbon-placement-end ant-ribbon-color-cyan"
      >
        <span
          class="ant-ribbon-content"
        >
          Hippies
        </span>
        <div
          class="ant-ribbon-corner"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-ribbon-wrapper css-var-root"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-var-root"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Pushes open the window
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="ant-card-body"
        >
           and raises the spyglass. 
        </div>
        <!---->
      </div>
      <div
        class="ant-ribbon ant-ribbon-placement-end ant-ribbon-color-green"
      >
        <span
          class="ant-ribbon-content"
        >
          Hippies
        </span>
        <div
          class="ant-ribbon-corner"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-ribbon-wrapper css-var-root"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-var-root"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Pushes open the window
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="ant-card-body"
        >
           and raises the spyglass. 
        </div>
        <!---->
      </div>
      <div
        class="ant-ribbon ant-ribbon-placement-end ant-ribbon-color-purple"
      >
        <span
          class="ant-ribbon-content"
        >
          Hippies
        </span>
        <div
          class="ant-ribbon-corner"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-ribbon-wrapper css-var-root"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-var-root"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Pushes open the window
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="ant-card-body"
        >
           and raises the spyglass. 
        </div>
        <!---->
      </div>
      <div
        class="ant-ribbon ant-ribbon-placement-end ant-ribbon-color-volcano"
      >
        <span
          class="ant-ribbon-content"
        >
          Hippies
        </span>
        <div
          class="ant-ribbon-corner"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-ribbon-wrapper css-var-root"
    >
      <div
        class="ant-card ant-card-bordered ant-card-small css-var-root"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Pushes open the window
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <div
          class="ant-card-body"
        >
           and raises the spyglass. 
        </div>
        <!---->
      </div>
      <div
        class="ant-ribbon ant-ribbon-placement-end ant-ribbon-color-magenta"
      >
        <span
          class="ant-ribbon-content"
        >
          Hippies
        </span>
        <div
          class="ant-ribbon-corner"
        />
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`badge demo > renders size correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-middle ant-space-gap-col-middle css-var-root"
>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count"
          data-show="true"
          title="5"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                5
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-count-sm"
          data-show="true"
          title="5"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                5
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
</div>
`;

exports[`badge demo > renders status correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
  >
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-success"
        />
        <!---->
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-error"
        />
        <!---->
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-default"
        />
        <!---->
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-processing"
        />
        <!---->
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-warning"
        />
        <!---->
      </span>
    </div>
    <!---->
  </div>
  <br />
  <div
    class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
  >
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-success"
        />
        <span
          class="ant-badge-status-text"
        >
          Success
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-error"
        />
        <span
          class="ant-badge-status-text"
        >
          Error
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-default"
        />
        <span
          class="ant-badge-status-text"
        >
          Default
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-processing"
        />
        <span
          class="ant-badge-status-text"
        >
          Processing
        </span>
      </span>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <span
        class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
      >
        <span
          class="ant-badge-status-dot ant-badge-status-warning"
        />
        <span
          class="ant-badge-status-text"
        >
          Warning
        </span>
      </span>
    </div>
    <!---->
  </div>
</div>
`;

exports[`badge demo > renders style-class correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-large ant-space-gap-col-large css-var-root"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-flex css-var-root ant-flex-gap-middle"
    >
      <span
        class="ant-badge css-var-root"
        style="border-radius: 8px;"
      >
        <span
          class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
        >
          <span
            class="ant-avatar-string"
            style="opacity: 0;"
          />
        </span>
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
          enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
          entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
          leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
          leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
          leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
          name="ant-badge-zoom"
          persisted="false"
        >
          <sup
            class="ant-scroll-number custom-badge-indicator ant-badge-count ant-badge-count-sm"
            data-show="true"
            title="5"
          >
            <bdi>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  5
                </span>
              </span>
            </bdi>
          </sup>
        </transition-stub>
        <!---->
      </span>
      <span
        class="ant-badge css-var-root"
      >
        <span
          class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
        >
          <span
            class="ant-avatar-string"
            style="opacity: 0;"
          />
        </span>
        <transition-stub
          appear="false"
          css="true"
          enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
          enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
          entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
          leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
          leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
          leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
          name="ant-badge-zoom"
          persisted="false"
        >
          <sup
            class="ant-scroll-number custom-badge-indicator ant-badge-count"
            data-show="true"
            style="font-size: 14px; background-color: rgb(105, 111, 199);"
            title="5"
          >
            <bdi>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  5
                </span>
              </span>
            </bdi>
          </sup>
        </transition-stub>
        <!---->
      </span>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
    >
      <div
        class="ant-ribbon-wrapper css-var-root custom-ribbon-root"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small css-var-root"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Card with custom ribbon
              </div>
              <!---->
            </div>
            <!---->
          </div>
          <!---->
          <div
            class="ant-card-body"
          >
             This card has a customized ribbon with semantic classNames and styles. 
          </div>
          <!---->
        </div>
        <div
          class="ant-ribbon ant-ribbon-placement-end"
          style="box-shadow: 0 2px 4px rgba(0,0,0,0.1);"
        >
          <span
            class="ant-ribbon-content"
          >
            Custom Ribbon
          </span>
          <div
            class="ant-ribbon-corner"
          />
        </div>
      </div>
      <div
        class="ant-ribbon-wrapper css-var-root custom-ribbon-root"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small css-var-root"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Card with custom ribbon
              </div>
              <!---->
            </div>
            <!---->
          </div>
          <!---->
          <div
            class="ant-card-body"
          >
             This card has a customized ribbon with semantic classNames and styles. 
          </div>
          <!---->
        </div>
        <div
          class="ant-ribbon ant-ribbon-placement-end"
          style="background: rgb(105, 111, 199); box-shadow: 0 2px 4px rgba(0,0,0,0.1);"
        >
          <span
            class="ant-ribbon-content"
            style="font-weight: bold;"
          >
            Custom Ribbon
          </span>
          <div
            class="ant-ribbon-corner"
            style="color: rgb(105, 111, 199);"
          />
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`badge demo > renders title correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-large ant-space-gap-col-large css-var-root"
>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count"
          data-show="true"
          title="Custom hover text"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                5
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-badge css-var-root"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square css-var-root ant-avatar-css-var"
      >
        <span
          class="ant-avatar-string"
          style="opacity: 0;"
        />
      </span>
      <transition-stub
        appear="false"
        css="true"
        enteractiveclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare "
        enterfromclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-prepare ant-badge-zoom-enter-prepare ant-badge-zoom-enter-start"
        entertoclass="ant-badge-zoom ant-badge-zoom-enter ant-badge-zoom-appear ant-badge-zoom-appear-active ant-badge-zoom-enter-active"
        leaveactiveclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        leavefromclass="ant-badge-zoom ant-badge-zoom-leave"
        leavetoclass="ant-badge-zoom ant-badge-zoom-leave ant-badge-zoom-leave-active"
        name="ant-badge-zoom"
        persisted="false"
      >
        <sup
          class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
          data-show="true"
          title="Negative"
        >
          <bdi>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                -
              </span>
            </span>
            <span
              class="ant-scroll-number-only"
              style="transition: none;"
            >
              <span
                class="ant-scroll-number-only-unit current"
              >
                5
              </span>
            </span>
          </bdi>
        </sup>
      </transition-stub>
      <!---->
    </span>
  </div>
  <!---->
</div>
`;
